<resources>
    <string name="app_name">Atm Consultoria</string>
    <string name="sobre_a_empresa">Sobre a empresa</string>
    <string name="texto_empresa">Existem muitas variações disponíveis de passagens
        de Lorem Ipsum, mas a maioria sofreu algum tipo de alteração, seja por inserção
        de passagens com humor, ou palavras aleatórias que não parecem nem um pouco convincentes.
        Se você pretende usar uma passagem de Lorem Ipsum, precisa ter certeza de que não há algo
        embaraçoso escrito escondido no meio do texto. Todos os geradores de Lorem Ipsum na internet
        tendem a repetir pedaços predefinidos conforme necessário, fazendo deste o primeiro gerador
        de Lorem Ipsum autêntico da internet. Ele usa um dicionário com mais de 200 palavras em Latim
        combinado com um punhado de modelos de estrutura de frases para gerar um Lorem Ipsum com
        aparência razoável, livre de repetições, inserções de humor, palavras não características,
        etc.
    Existem muitas variações disponíveis de passagens de Lorem
        Ipsum, mas a maioria sofreu algum tipo de alteração,
        seja por inserção de passagens com humor, ou palavras aleatórias que
        não parecem nem um pouco convincentes. Se você pretende usar uma passagem de
        Lorem Ipsum, precisa ter certeza de que não há algo embaraçoso escrito escondido no meio do texto. Todos
        geradores de Lorem Ipsum na internet tendem a repetir pedaços predefinidos conforme necessário, fazendo deste
        o primeiro gerador de Lorem Ipsum autêntico da internet. Ele usa um dicionário com mais de 200 palavras em Latim
        combinado com um punhado de modelos de estrutura de frases para gerar um Lorem Ipsum com aparência razoável,
        livre de repetições, inserções de humor, palavras não características, etc</string>
    <string name="servicos_detalhe">Serviços</string>
    <string name="nossos_clientes">Nossos Clientes</string>
    <string name="info_sys">Empresa de desenvolvimento de sistemas</string>
    <string name="rsm_info">Empresa de Auditoria</string>
    <string name="contato">Contato</string>
    <string name="email_contato">E-mail: antonio_wac@hotmail.com</string>
    <string name="telefone_contato">Telefone: (83) 99130-4444</string>
    <string name="celular_contato">Celular: (00) 00000-0000</string>
</resources>
