<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aa.atmconsultoria.ClienteActivity">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/detalhe_cliente"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:textSize="@dimen/texto_secao"
        android:textColor="@color/texto_cliente"
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:text="@string/nossos_clientes"
        android:layout_above="@+id/imageView7"
        android:layout_toRightOf="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6"
        android:layout_marginBottom="23dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/cliente1"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_below="@+id/imageView6"
        android:layout_alignLeft="@+id/imageView6"
        android:layout_alignStart="@+id/imageView6" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/info_sys"
        android:layout_below="@+id/imageView7"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/cliente2"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/imageView7"
        android:layout_alignStart="@+id/imageView7" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9"
        android:layout_below="@+id/imageView8"
        android:layout_marginTop="17dp"
        android:text="@string/rsm_info" />
</RelativeLayout>
